# seminar-cggp-alpha-wrap-2

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
doc/: code.md  experiments.md  project.md  supplementary.md
include/alpha_wrap_2/: alpha_wrap_2.h  export_utils.h  point_set_oracle_2.h  statistics.h  timer.h  traversability.h  types.h
src/: CMakeLists.txt
src/alpha_wrap_2/: alpha_wrap_2.cpp  alpha_wrap_2.h  export_utils.cpp  export_utils.h  main.cpp  point_set_oracle_2.cpp  point_set_oracle_2.h  statistics.cpp  traversability.cpp  types.h
src/app/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  tests_unit.cpp
